--- a/lab_2/lab_2.ipynb
+++ b/lab_2/lab_2.ipynb
@@ -2,13 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "id": "initial_id",
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-03-27T15:49:09.983738Z",
-     "start_time": "2024-03-27T15:49:08.312430Z"
+     "end_time": "2024-03-30T06:32:05.989050Z",
+     "start_time": "2024-03-30T06:32:04.976881Z"
     }
    },
    "outputs": [
@@ -54,12 +54,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-27T15:49:54.953266Z",
-     "start_time": "2024-03-27T15:49:54.948089Z"
+     "end_time": "2024-03-30T06:32:26.941477Z",
+     "start_time": "2024-03-30T06:32:26.938066Z"
     }
    },
    "id": "d78d0591eb65a467",
-   "execution_count": 2
+   "execution_count": 6
   },
   {
    "cell_type": "markdown",
@@ -95,12 +95,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-27T15:51:39.740992Z",
-     "start_time": "2024-03-27T15:51:39.734105Z"
+     "end_time": "2024-03-30T06:32:38.179343Z",
+     "start_time": "2024-03-30T06:32:38.175241Z"
     }
    },
    "id": "c54eeeab94990bcc",
-   "execution_count": 3
+   "execution_count": 7
   },
   {
    "cell_type": "markdown",
@@ -212,12 +212,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-27T16:03:53.803823Z",
-     "start_time": "2024-03-27T16:03:53.799867Z"
+     "end_time": "2024-03-30T06:32:47.830790Z",
+     "start_time": "2024-03-30T06:32:47.826763Z"
     }
    },
    "id": "b6dac60730b403b9",
-   "execution_count": 6
+   "execution_count": 8
   },
   {
    "cell_type": "markdown",
@@ -256,12 +256,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-27T16:05:00.153478Z",
-     "start_time": "2024-03-27T16:05:00.149114Z"
+     "end_time": "2024-03-30T06:32:50.348414Z",
+     "start_time": "2024-03-30T06:32:50.344106Z"
     }
    },
    "id": "a660f0102da58d0f",
-   "execution_count": 8
+   "execution_count": 9
   },
   {
    "cell_type": "code",
@@ -294,12 +294,22 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-27T16:05:28.528525Z",
-     "start_time": "2024-03-27T16:05:28.390532Z"
+     "end_time": "2024-03-30T06:32:53.220998Z",
+     "start_time": "2024-03-30T06:32:52.796561Z"
     }
    },
    "id": "140a2b817d6c29ff",
-   "execution_count": 9
+   "execution_count": 10
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### Ряд VHI для області за вказаний рік, пошук екстремумів (min та max);"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "2a2c49b6391b63f3"
   },
   {
    "cell_type": "code",
@@ -318,12 +328,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-27T16:06:15.836027Z",
-     "start_time": "2024-03-27T16:06:15.831816Z"
+     "end_time": "2024-03-30T06:32:56.866136Z",
+     "start_time": "2024-03-30T06:32:56.862319Z"
     }
    },
    "id": "dd5e0c0aa69f5c91",
-   "execution_count": 10
+   "execution_count": 11
   },
   {
    "cell_type": "code",
@@ -332,60 +342,136 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[+] Cherkasy: min 10.68 max 82.09\n",
-      "[+] Chernihiv: min 15.17 max 75.11\n",
-      "[+] Chernivtsi: min 18.83 max 69.31\n",
-      "[+] Crimea: min 13.28 max 77.6\n",
-      "[+] Dnipropetrovs'k: min 17.77 max 90.29\n",
-      "[+] Donets'k: min 17.4 max 90.34\n",
+      "[+] Cherkasy: min 10.68 max 83.7\n",
+      "[+] Chernihiv: min 15.17 max 80.65\n",
+      "[+] Chernivtsi: min 15.16 max 72.19\n",
+      "[+] Crimea: min 13.28 max 90.96\n",
+      "[+] Dnipropetrovs'k: min 17.58 max 93.17\n",
+      "[+] Donets'k: min 6.26 max 96.18\n",
       "[+] Ivano-Frankivs'k: min 18.98 max 73.35\n",
       "[+] Kharkiv: min 9.36 max 91.42\n",
-      "[+] Kherson: min 12.23 max 83.58\n",
-      "[+] Khmel'nyts'kyy: min 20.97 max 79.4\n",
+      "[+] Kherson: min 12.23 max 90.61\n",
+      "[+] Khmel'nyts'kyy: min 18.41 max 79.4\n",
       "[+] Kiev: min 10.6 max 80.88\n",
       "[+] Kiev City: min 6.49 max 76.84\n",
-      "[+] Kirovohrad: min 16.75 max 84.52\n",
-      "[+] Luhans'k: min 22.92 max 90.32\n",
-      "[+] L'viv: min 29.53 max 69.96\n",
-      "[+] Mykolayiv: min 5.94 max 86.71\n",
-      "[+] Odessa: min 5.52 max 83.46\n",
-      "[+] Poltava: min 22.52 max 85.14\n",
+      "[+] Kirovohrad: min 16.36 max 84.52\n",
+      "[+] Luhans'k: min 12.45 max 90.32\n",
+      "[+] L'viv: min 18.31 max 69.96\n",
+      "[+] Mykolayiv: min 5.94 max 92.31\n",
+      "[+] Odessa: min 5.52 max 89.14\n",
+      "[+] Poltava: min 15.68 max 85.14\n",
       "[+] Rivne: min 20.7 max 77.45\n",
-      "[+] Sevastopol: min 8.14 max 72.87\n",
-      "[+] Sumy: min 16.81 max 77.05\n",
-      "[+] Ternopil': min 24.33 max 75.04\n",
-      "[+] Transcarpathia: min 20.12 max 72.59\n",
-      "[+] Vinnytsya: min 11.25 max 81.44\n",
-      "[+] Volyn: min 24.65 max 78.32\n",
-      "[+] Zaporizhzhya: min 10.88 max 87.3\n",
-      "[+] Zhytomyr: min 26.51 max 75.01\n"
+      "[+] Sevastopol: min 8.14 max 76.94\n",
+      "[+] Sumy: min 16.37 max 79.84\n",
+      "[+] Ternopil': min 20.63 max 77.71\n",
+      "[+] Transcarpathia: min 18.0 max 72.59\n",
+      "[+] Vinnytsya: min 11.25 max 82.64\n",
+      "[+] Volyn: min 11.91 max 78.32\n",
+      "[+] Zaporizhzhya: min 10.88 max 96.69\n",
+      "[+] Zhytomyr: min 19.48 max 77.57\n"
      ]
     }
    ],
    "source": [
     "for i in range(1, 28):\n",
-    "    region_year_analysis(region_id=i, years=(\"2000\", \"2010\"))"
+    "    region_year_analysis(region_id=i, years=(\"1985\", \"2010\"))"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-27T16:15:28.499038Z",
-     "start_time": "2024-03-27T16:15:28.473222Z"
+     "end_time": "2024-03-30T08:58:54.946763Z",
+     "start_time": "2024-03-30T08:58:54.913634Z"
     }
    },
    "id": "52beb017180899d9",
-   "execution_count": 19
+   "execution_count": 24
   },
   {
    "cell_type": "code",
    "outputs": [],
    "source": [
-    "df3 = result_df[(result_df[\"VHI\"] < 35) & (result_df['region_id'] == 1)]"
+    "def drought_years_analysis(df, years_range=(\"1981\", \"2024\"), threshold_extreme=15, threshold_moderate=(15, 35), percent_threshold=20):\n",
+    "    extreme_drought_years = []\n",
+    "    moderate_drought_years = []\n",
+    "\n",
+    "    total_regions = len(set(df['region_id']))\n",
+    "    min_regions_affected = (percent_threshold / 100) * total_regions\n",
+    "\n",
+    "    for year in range(int(years_range[0]), int(years_range[1]) + 1):\n",
+    "        yearly_data = df[df['Year'] == year]\n",
+    "        extreme_drought_count = len(yearly_data[yearly_data['VHI'] < threshold_extreme])\n",
+    "        moderate_drought_count = len(yearly_data[(yearly_data['VHI'] >= threshold_moderate[0]) & (yearly_data['VHI'] <= threshold_moderate[1])])\n",
+    "\n",
+    "        if extreme_drought_count >= min_regions_affected:\n",
+    "            extreme_drought_years.append(year)\n",
+    "        if moderate_drought_count >= min_regions_affected:\n",
+    "            moderate_drought_years.append(year)\n",
+    "\n",
+    "    return extreme_drought_years, moderate_drought_years"
    ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-03-30T07:43:27.929689Z",
+     "start_time": "2024-03-30T07:43:27.925182Z"
+    }
+   },
+   "id": "69b657bd77bb2338",
+   "execution_count": 21
+  },
+  {
+   "cell_type": "code",
+   "outputs": [],
+   "source": [
+    "selected_regions = [3, 5, 12]  \n",
+    "selected_years = (\"2005\", \"2015\")\n",
+    "# vhi_for_regions_and_years(selected_regions, selected_years)  "
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-03-30T07:43:29.553871Z",
+     "start_time": "2024-03-30T07:43:29.550926Z"
+    }
+   },
+   "id": "7c5210a777395a0e",
+   "execution_count": 22
+  },
+  {
+   "cell_type": "code",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Роки з екстремальними посухами: [2000, 2007]\n",
+      "Роки з помірними посухами: [2000, 2001, 2002, 2003, 2004, 2005, 2006, 2007, 2008, 2009, 2010]\n"
+     ]
+    }
+   ],
+   "source": [
+    "extreme_drought_years, moderate_drought_years = drought_years_analysis(result_df, years_range=(\"2000\", \"2010\"))\n",
+    "print(\"Роки з екстремальними посухами:\", extreme_drought_years)\n",
+    "print(\"Роки з помірними посухами:\", moderate_drought_years)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-03-30T07:43:31.473652Z",
+     "start_time": "2024-03-30T07:43:31.451722Z"
+    }
+   },
+   "id": "44d151f040d75f4b",
+   "execution_count": 23
+  },
+  {
+   "cell_type": "code",
+   "outputs": [],
+   "source": [],
    "metadata": {
     "collapsed": false
    },
-   "id": "69b657bd77bb2338"
+   "id": "c268b7e6eb722f3f"
   }
  ],
  "metadata": {
