--- a/lab_2/lab_2.ipynb
+++ b/lab_2/lab_2.ipynb
@@ -231,8 +231,9 @@
   },
   {
    "cell_type": "code",
-   "outputs": [],
    "source": [
+    "import glob\n",
+    "import pandas as pd\n",
     "def create_data_frame(folder_path1):\n",
     "\n",
     "    csv_files = glob.glob(folder_path1 + \"/*.csv\")\n",
@@ -256,15 +257,28 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-30T06:32:50.348414Z",
-     "start_time": "2024-03-30T06:32:50.344106Z"
+     "end_time": "2024-05-12T08:27:54.465313Z",
+     "start_time": "2024-05-12T08:27:53.481147Z"
     }
    },
    "id": "a660f0102da58d0f",
-   "execution_count": 9
+   "outputs": [],
+   "execution_count": 5
   },
   {
    "cell_type": "code",
+   "source": [
+    "result_df = create_data_frame('download')\n",
+    "print(result_df)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-05-12T08:27:55.850600Z",
+     "start_time": "2024-05-12T08:27:55.321201Z"
+    }
+   },
+   "id": "140a2b817d6c29ff",
    "outputs": [
     {
      "name": "stdout",
@@ -287,19 +301,7 @@
      ]
     }
    ],
-   "source": [
-    "result_df = create_data_frame('download')\n",
-    "print(result_df)"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2024-03-30T06:32:53.220998Z",
-     "start_time": "2024-03-30T06:32:52.796561Z"
-    }
-   },
-   "id": "140a2b817d6c29ff",
-   "execution_count": 10
+   "execution_count": 6
   },
   {
    "cell_type": "markdown",
@@ -471,7 +473,8 @@
    "metadata": {
     "collapsed": false
    },
-   "id": "c268b7e6eb722f3f"
+   "id": "c268b7e6eb722f3f",
+   "execution_count": null
   }
  ],
  "metadata": {
